# philosophers

./: CMakeLists.txt  README.md
philo_one/: Makefile  cleanup.c  ft_atoi.c  ft_helper_functions.c  locked_writing.c  main.c  philo_loop.c  philo_one  philosophers.h  setup.c
philo_three/: Makefile  locked_writing.c  main.c  philo_loop.c  philosophers.h  setup.c
philo_two/: Makefile  cleanup.c  locked_writing.c  main.c  philo_loop.c  philosophers.h  setup.c
